# mcp-sqlite

./: .gitignore  CONTRIBUTING.md  LICENCE  README.md  mcp_sqlite_server.py  pyproject.toml
src/setting/: config.py  logger.py
src/sqlite_mcp/: server.py
